Add verification report exports
